# pygame-for-chinese-children

./: .gitignore  README.md  pg_simple_wraper.py  pyproject.toml
src/nngame/: easygame.py
