[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "nngame"
version = "0.0.2"
authors = [
  { name="Zhang Feibao", email="382297510@qq.com" },
]
description = "A lite,simple package for game makeing based on pygame"
readme = "README.md"
dependencies = ["pygame >= 2.1.1"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"